# apg-py

./: .gitignore  Doxyfile  LICENSE  README.md  pyproject.toml
apg_py/: __main__.py  generator.py
apg_py/api/: api.py  rule_attributes.py  rule_dependencies.py  sabnf_grammar.abnf  sabnf_grammar.py  scanner.py  scanner_callbacks.py  scanner_grammar.abnf  scanner_grammar.py  semantic.py  semantic_callbacks.py  syntax.py  syntax_callbacks.py
apg_py/exp/: exp.py
apg_py/lib/: ast.py  backreferences.py  identifiers.py  parser.py  stats.py  trace.py  utilities.py
docs/: LICENSE.html  SABNF.html  SABNF.md  doxygen_custom.css  doxygen_footer.html  doxygen_header.html  homepage.md  quick_github.md  quick_pip.md
examples/ast/: ast_callbacks.py  main.py  parser_callbacks.py
examples/basics/: back_reference.py  look_ahead.py  look_behind.py  main.py  parsing_basics.py  stats.py  substrings.py  trace.py  udts.py
examples/exp/: ast_translate.py  basic.py  csv.py  flags.py  limits.py  main.py  multiline.py  recursive.py  replace.py  rules.py  split.py  udts.py
examples/grammar_object/: abnf.py  main.py  save.py  use.py
examples/ini_file/: ast_callbacks.py  data  grammar.abnf  grammar.py  ini_file.py  main.py  parser_callbacks.py
tests/: test_api_scanner.py  test_api_semantic.py  test_api_syntax.py  test_ast.py  test_bkr.py  test_exp_include.py  test_exp_methods.py  test_exp_simple.py  test_lookbehind.py  test_rnm_callbacks.py  test_stats.py  test_trace.py  test_udt.py
tests/grammars/: abnf.abnf  abnf.py  anbncn.abnf  anbncn.py  ast_branch_fail.abnf  float.py  (+39 more)
